syntax = "proto3";

package transcript;

option go_package = "github.com/yourusername/transcript/proto";

// Service definition
service TranscriptService {
  rpc GetTranscriptSummary (TranscriptRequest) returns (TranscriptSummaryResponse);
}

// Request message
message TranscriptRequest {
  string transcript_id = 1;
}

// Response messages that match your Go structs
message TranscriptSummaryResponse {
  string transcription_summary = 1;
  repeated TranscriptionTopic transcription_topics = 2;
  repeated TranscriptionAlert transcription_alerts = 3;
}

message TranscriptionTopic {
  string name = 1;
  string description = 2;
}

message TranscriptionAlert {
  string type = 1;
  string description = 2;
  string quote = 3;
}
